crates/rome_cli/tests/snapshots/main_commands_lint/should_not_enable_all_recommended_rules.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "$schema": "https://docs.rome.tools/schemas/12.1.0/schema.json",
  "organizeImports": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "a11y": {},
      "complexity": {},
      "correctness": {},
      "performance": {},
      "security": {},
      "style": {},
      "suspicious": {}
    }
  }
}
```

## `fix.js`

```js

    		LOOP: for (const x of xs) {
    		    if (x > 0) {
    		        break;
    		    }
    		    f(x);
    		}
		
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


