crates/rome_cli/tests/snapshots/main_commands_lint/should_not_enable_nursery_rules.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "$schema": "https://docs.rome.tools/schemas/12.1.0/schema.json",
  "organizeImports": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "nursery": {
        "noAccumulatingSpread": "error"
      }
    }
  }
}
```

## `fix.ts`

```ts
const bannedType: Boolean = true;
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


