crates/rome_cli/tests/snapshots/main_commands_lint/suppression_syntax_error.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
// rome-ignore(:

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
check.js:1:15 suppressions/parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × unexpected token, expected one of ':' or whitespace
  
  > 1 │ // rome-ignore(:
      │               ^
    2 │ 
  

```

```block
check.js lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Fixes applied to the file, but there are still diagnostics to address.
  

```

```block
Checked 1 file(s) in <TIME>
```


